--- a/index.html
+++ b/index.html
@@ -438,25 +438,287 @@
 
         // Каталог металла
         const metalCatalog = [
-            { code: "B-20B1", group: "Балка двутавровая", label: "Балка 20Б1 (С255)" },
-            { code: "B-25B1", group: "Балка двутавровая", label: "Балка 25Б1 (С255)" },
-            { code: "B-30B1", group: "Балка двутавровая", label: "Балка 30Б1 (С255)" },
-            { code: "B-35B1", group: "Балка двутавровая", label: "Балка 35Б1 (С255)" },
-            { code: "B-40K1", group: "Балка двутавровая", label: "Балка 40К1 (С255)" },
+<script>
+  // Telegram WebApp
+  const tg = window.Telegram.WebApp;
+  tg.expand();
+  tg.setHeaderColor("#121212");
+  tg.setBackgroundColor("#121212");
 
-            { code: "C-16P", group: "Швеллер", label: "Швеллер 16П (С255)" },
-            { code: "C-20P", group: "Швеллер", label: "Швеллер 20П (С255)" },
-            { code: "C-24P", group: "Швеллер", label: "Швеллер 24П (С255)" },
+  // =========================================================
+  // ПОЛНЫЙ КАТАЛОГ МЕТАЛЛА (единый)
+  // Порядок групп: Балки → Листы → Трубы → Швеллер → Уголки → Прочее
+  // Формат: { code, group, label }
+  // =========================================================
 
-            { code: "T-80x80x4", group: "Труба профильная", label: "Труба 80х80х4" },
-            { code: "T-100x100x4", group: "Труба профильная", label: "Труба 100х100х4" },
-            { code: "T-120x120x5", group: "Труба профильная", label: "Труба 120х120х5" },
-            { code: "T-140x140x5", group: "Труба профильная", label: "Труба 140х140х5" },
+  const metalCatalog = (() => {
+    const items = [];
+    const add = (code, group, label) => items.push({ code, group, label });
+    const addMany = (group, rows) => rows.forEach(r => add(r.code, group, r.label));
 
-            { code: "S-10", group: "Лист г/к", label: "Лист 10мм (С255)" },
-            { code: "S-16", group: "Лист г/к", label: "Лист 16мм (С255)" },
-            { code: "S-20", group: "Лист г/к", label: "Лист 20мм (С345)" }
-        ];
+    /* =========================
+     * 1) БАЛКИ (ДВУТАВРЫ)
+     * ========================= */
+    addMany("Балки", [
+      { code: "B-10B1",  label: "Балка (двутавр) стальная г/к 10Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-12B1",  label: "Балка (двутавр) стальная г/к 12Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-12B2",  label: "Балка (двутавр) стальная г/к 12Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-14B1",  label: "Балка (двутавр) стальная г/к 14Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-14B2",  label: "Балка (двутавр) стальная г/к 14Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-16B1",  label: "Балка (двутавр) стальная г/к 16Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-16B2",  label: "Балка (двутавр) стальная г/к 16Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-18B1",  label: "Балка (двутавр) стальная г/к 18Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-18B2",  label: "Балка (двутавр) стальная г/к 18Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-20B1",  label: "Балка (двутавр) стальная г/к 20Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-20B2",  label: "Балка (двутавр) стальная г/к 20Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-20SH1", label: "Балка (двутавр) стальная г/к 20Ш1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-20K1",  label: "Балка (двутавр) стальная г/к 20К1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-20K2",  label: "Балка (двутавр) стальная г/к 20К2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25B1",  label: "Балка (двутавр) стальная г/к 25Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25B2",  label: "Балка (двутавр) стальная г/к 25Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25K1",  label: "Балка (двутавр) стальная г/к 25К1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25K2",  label: "Балка (двутавр) стальная г/к 25К2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25K3",  label: "Балка (двутавр) стальная г/к 25К3 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25K4",  label: "Балка (двутавр) стальная г/к 25К4 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25K6",  label: "Балка (двутавр) стальная г/к 25К6 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25SH0", label: "Балка (двутавр) стальная г/к 25Ш0 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25SH1", label: "Балка (двутавр) стальная г/к 25Ш1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25SH2", label: "Балка (двутавр) стальная г/к 25Ш2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25SH3", label: "Балка (двутавр) стальная г/к 25Ш3 ГОСТ Р 57837-2017 С255" },
+      { code: "B-25SH4", label: "Балка (двутавр) стальная г/к 25Ш4 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30B1",  label: "Балка (двутавр) стальная г/к 30Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30B2",  label: "Балка (двутавр) стальная г/к 30Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30B3",  label: "Балка (двутавр) стальная г/к 30Б3 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30K1",  label: "Балка (двутавр) стальная г/к 30К1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30K2",  label: "Балка (двутавр) стальная г/к 30К2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30K3",  label: "Балка (двутавр) стальная г/к 30К3 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30K4",  label: "Балка (двутавр) стальная г/к 30К4 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30K5",  label: "Балка (двутавр) стальная г/к 30К5 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30M",   label: "Балка (двутавр) стальная г/к 30М ГОСТ Р 57837-2017 С255" },
+      { code: "B-30SH1", label: "Балка (двутавр) стальная г/к 30Ш1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30SH2", label: "Балка (двутавр) стальная г/к 30Ш2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-30SH3", label: "Балка (двутавр) стальная г/к 30Ш3 ГОСТ Р 57837-2017 С255" },
+      { code: "B-35B1",  label: "Балка (двутавр) стальная г/к 35Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-35B2",  label: "Балка (двутавр) стальная г/к 35Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-35SH1", label: "Балка (двутавр) стальная г/к 35Ш1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-40B1",  label: "Балка (двутавр) стальная г/к 40Б1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-40B2",  label: "Балка (двутавр) стальная г/к 40Б2 ГОСТ Р 57837-2017 С255" },
+      { code: "B-40SH1", label: "Балка (двутавр) стальная г/к 40Ш1 ГОСТ Р 57837-2017 С255" },
+      { code: "B-40K1",  label: "Балка (двутавр) стальная г/к 40К1 ГОСТ Р 57837-2017 С255" },
+    ]);
+
+    /* =========================
+     * 2) ЛИСТЫ
+     * ========================= */
+    addMany("Листы", [
+      { code: "S-2",  label: "Прокат листовой г/к 2 мм ГОСТ 19903-2015 С255" },
+      { code: "S-3",  label: "Прокат листовой г/к 3 мм ГОСТ 19903-2015 С255" },
+      { code: "S-4",  label: "Прокат листовой г/к 4 мм ГОСТ 19903-2015 С255" },
+      { code: "S-5",  label: "Прокат листовой г/к 5 мм ГОСТ 19903-2015 С255" },
+      { code: "S-6",  label: "Прокат листовой г/к 6 мм ГОСТ 19903-2015 С255" },
+      { code: "S-8",  label: "Прокат листовой г/к 8 мм ГОСТ 19903-2015 С255" },
+      { code: "S-10", label: "Прокат листовой г/к 10 мм ГОСТ 19903-2015 С255" },
+      { code: "S-12", label: "Прокат листовой г/к 12 мм ГОСТ 19903-2015 С255" },
+      { code: "S-14", label: "Прокат листовой г/к 14 мм ГОСТ 19903-2015 С255" },
+      { code: "S-16", label: "Прокат листовой г/к 16 мм ГОСТ 19903-2015 С255" },
+      { code: "S-18", label: "Прокат листовой г/к 18 мм ГОСТ 19903-2015 С255" },
+      { code: "S-20", label: "Прокат листовой г/к 20 мм ГОСТ 19903-2015 С255" },
+      { code: "S-25", label: "Прокат листовой г/к 25 мм ГОСТ 19903-2015 С255" },
+      { code: "S-30", label: "Прокат листовой г/к 30 мм ГОСТ 19903-2015 С255" },
+      { code: "S-40", label: "Прокат листовой г/к 40 мм ГОСТ 19903-2015 С355" },
+    ]);
+
+    /* =========================
+     * 3) ТРУБЫ
+     * ========================= */
+    const pipeWall = [1.0, 1.2, 1.5, 2, 2.5, 3, 3.5, 4, 5, 6, 7, 8, 9, 10, 12];
+
+    // 3.1 Электросварные круглые ГОСТ 10704-91
+    const erwDiameters = [10,12,14,16,18,20,25,32,38,45,57,76,89,108,114,133,159,168,219,273,325,377,426,530,630,720,820,920,1020,1220,1420];
+    erwDiameters.forEach(d => pipeWall.forEach(t => {
+      add(`T-ЭС-${d}x${t}`, "Трубы", `Труба электросварная Ø${d}x${t} ГОСТ 10704-91`);
+    }));
+
+    // 3.2 Бесшовные горячедеформированные ГОСТ 8732-78
+    const hotSeamlessDiam = [20,25,32,38,45,57,76,89,108,114,133,159,168,219,273,325,377,426,530];
+    const hotSeamlessWall = [2.5,3,3.5,4,5,6,7,8,9,10,12,14,16,18,20,22,25,28,30];
+    hotSeamlessDiam.forEach(d => hotSeamlessWall.forEach(t => {
+      add(`T-БШГД-${d}x${t}`, "Трубы", `Труба бесшовная г/д Ø${d}x${t} ГОСТ 8732-78`);
+    }));
+
+    // 3.3 Бесшовные холоднодеформированные ГОСТ 8734-75
+    const coldSeamlessDiam = [5,6,8,10,12,14,16,18,20,25,30,32,38,45,50,57,60,63,70,76,83,89];
+    const coldSeamlessWall = [0.5,0.8,1,1.2,1.5,2,2.5,3,3.5,4,5,6];
+    coldSeamlessDiam.forEach(d => coldSeamlessWall.forEach(t => {
+      add(`T-БШХД-${d}x${t}`, "Трубы", `Труба бесшовная х/д Ø${d}x${t} ГОСТ 8734-75`);
+    }));
+
+    // 3.4 Профильные прямоугольные ГОСТ 8645-68
+    const profileWall = [1.5,2,2.5,3,4,5,6,8,10];
+    const rectSides = [
+      [40,20],[50,25],[60,30],[80,40],[100,50],
+      [120,60],[140,60],[150,100],[160,80],[180,100],
+      [200,100],[250,150],[300,200],
+    ];
+    rectSides.forEach(([a,b]) => profileWall.forEach(t => {
+      add(`T-ПР-${a}x${b}x${t}`, "Трубы", `Труба профильная ${a}x${b}x${t} ГОСТ 8645-68`);
+    }));
+
+    // 3.5 Профильные квадратные ГОСТ 8639-82
+    const squareSides = [15,20,25,30,40,50,60,80,100,120,140,160,180,200];
+    squareSides.forEach(a => profileWall.forEach(t => {
+      add(`T-ПК-${a}x${a}x${t}`, "Трубы", `Труба профильная ${a}x${a}x${t} ГОСТ 8639-82`);
+    }));
+
+    /* =========================
+     * 4) ШВЕЛЛЕР
+     * ========================= */
+    addMany("Швеллер", [
+      { code: "C-5P",   label: "Швеллер г/к 5П ГОСТ 8240-97 С255" },
+      { code: "C-6.5P", label: "Швеллер г/к 6,5П ГОСТ 8240-97 С255" },
+      { code: "C-8P",   label: "Швеллер г/к 8П ГОСТ 8240-97 С255" },
+      { code: "C-10P",  label: "Швеллер г/к 10П ГОСТ 8240-97 С255" },
+      { code: "C-12P",  label: "Швеллер г/к 12П ГОСТ 8240-97 С255" },
+      { code: "C-14P",  label: "Швеллер г/к 14П ГОСТ 8240-97 С255" },
+      { code: "C-16P",  label: "Швеллер г/к 16П ГОСТ 8240-97 С255" },
+      { code: "C-18P",  label: "Швеллер г/к 18П ГОСТ 8240-97 С255" },
+      { code: "C-20P",  label: "Швеллер г/к 20П ГОСТ 8240-97 С255" },
+      { code: "C-22P",  label: "Швеллер г/к 22П ГОСТ 8240-97 С255" },
+      { code: "C-24P",  label: "Швеллер г/к 24П ГОСТ 8240-97 С255" },
+      { code: "C-27P",  label: "Швеллер г/к 27П ГОСТ 8240-97 С255" },
+      { code: "C-30P",  label: "Швеллер г/к 30П ГОСТ 8240-97 С255" },
+      { code: "C-33P",  label: "Швеллер г/к 33П ГОСТ 8240-97 С255" },
+      { code: "C-36P",  label: "Швеллер г/к 36П ГОСТ 8240-97 С255" },
+      { code: "C-40P",  label: "Швеллер г/к 40П ГОСТ 8240-97 С255" },
+    ]);
+
+    /* =========================
+     * 5) УГОЛКИ
+     * ========================= */
+    addMany("Уголки", [
+      { code: "A-25x4",   label: "Уголок равнополочный 25x4 ГОСТ 8509-93 С255" },
+      { code: "A-32x4",   label: "Уголок равнополочный 32x4 ГОСТ 8509-93 С255" },
+      { code: "A-35x4",   label: "Уголок равнополочный 35x4 ГОСТ 8509-93 С255" },
+      { code: "A-40x4",   label: "Уголок равнополочный 40x4 ГОСТ 8509-93 С255" },
+      { code: "A-45x4",   label: "Уголок равнополочный 45x4 ГОСТ 8509-93 С255" },
+      { code: "A-50x5",   label: "Уголок равнополочный 50x5 ГОСТ 8509-93 С255" },
+      { code: "A-56x5",   label: "Уголок равнополочный 56x5 ГОСТ 8509-93 С255" },
+      { code: "A-63x5",   label: "Уголок равнополочный 63x5 ГОСТ 8509-93 С255" },
+      { code: "A-70x6",   label: "Уголок равнополочный 70x6 ГОСТ 8509-93 С255" },
+      { code: "A-75x6",   label: "Уголок равнополочный 75x6 ГОСТ 8509-93 С255" },
+      { code: "A-80x6",   label: "Уголок равнополочный 80x6 ГОСТ 8509-93 С255" },
+      { code: "A-90x6",   label: "Уголок равнополочный 90x6 ГОСТ 8509-93 С255" },
+      { code: "A-100x8",  label: "Уголок равнополочный 100x8 ГОСТ 8509-93 С255" },
+      { code: "A-110x8",  label: "Уголок равнополочный 110x8 ГОСТ 8509-93 С255" },
+      { code: "A-125x8",  label: "Уголок равнополочный 125x8 ГОСТ 8509-93 С255" },
+      { code: "A-140x9",  label: "Уголок равнополочный 140x9 ГОСТ 8509-93 С255" },
+      { code: "A-160x10", label: "Уголок равнополочный 160x10 ГОСТ 8509-93 С255" },
+    ]);
+
+    /* =========================
+     * 6) ПРОЧЕЕ
+     * ========================= */
+
+    // Арматура
+    const rebarA500 = [5.5,6,7,8,9,10,11,12,14,16,18,20,22,25,28,32,36,40];
+    rebarA500.forEach(d => add(
+      `R-A500-${String(d).replace(".", "_")}`,
+      "Прочее",
+      `Арматура рифлёная А500 (А3) Ø${String(d).replace(".", ",")} ГОСТ 52544-2006`
+    ));
+
+    const rebarA240 = [6,8,10,12,14,16,18,20,22,25,28,32,36,40];
+    rebarA240.forEach(d => add(
+      `R-A240-${d}`,
+      "Прочее",
+      `Арматура гладкая А240 (А1) Ø${d} ГОСТ 5781-82`
+    ));
+
+    // Круг
+    const krugSizes = [
+      5,5.5,6,6.5,7,7.5,8,8.5,9,9.5,
+      10,11,12,13,14,15,16,17,18,19,
+      20,22,24,25,26,28,30,32,34,36,
+      38,40,42,45,48,50,52,55,58,60,
+      63,65,70,75,80,85,90,95,100,
+      105,110,120,130,140,150,160,170,180,190,200,
+      210,220,230,240,250,260,270
+    ];
+    krugSizes.forEach(d => add(
+      `KR-${String(d).replace(".", "_")}`,
+      "Прочее",
+      `Круг стальной г/к Ø${String(d).replace(".", ",")} ГОСТ 2590-2006 С255`
+    ));
+
+    // Квадрат
+    const kvadratSizes = [
+      6,7,8,9,10,11,12,13,14,15,
+      16,17,18,19,20,22,24,25,26,28,
+      30,32,34,36,38,40,42,45,48,50,
+      55,60,63,65,70,75,80,85,90,95,
+      100,110,120,130,140,150,160,170,180,190,200
+    ];
+    kvadratSizes.forEach(s => add(
+      `KV-${s}`,
+      "Прочее",
+      `Квадрат стальной г/к ${s}x${s} ГОСТ 2591-2006 С255`
+    ));
+
+    // Шестигранник
+    const hexSizes = [8,10,12,14,17,19,22,24,27,30,32,36,41,46,50,55,60,65,70,75,80,90,100];
+    hexSizes.forEach(s => add(
+      `HEX-${s}`,
+      "Прочее",
+      `Шестигранник стальной г/к ${s} ГОСТ 2879-2006 С255`
+    ));
+
+    // Полоса
+    const thickness = [4,5,6,8,10,12,14,16,18,20,22,25,28,30,32,36,40,45,50,60,70,80];
+    const width = [10,12,14,16,18,20,22,25,28,30,32,36,40,45,50,60,70,80,90,100,120,140,160,180,200];
+    thickness.forEach(t => width.forEach(w => add(
+      `PL-${t}x${w}`,
+      "Прочее",
+      `Полоса стальная г/к ${t}x${w} ГОСТ 103-2006 С255`
+    )));
+
+    return items;
+  })();
+
+  // ---------------------------------------------------------
+  // Дальше твой код остаётся как есть (buildSelectHTML и т.д.)
+  // ---------------------------------------------------------
+
+  // Кэш для селекта
+  let cachedSelectHTML = "";
+
+  function buildSelectHTML() {
+    if (cachedSelectHTML) return cachedSelectHTML;
+
+    let html = '<select class="metal-type">';
+    html += '<option value="" disabled selected>Выберите металл...</option>';
+
+    const groups = {};
+    metalCatalog.forEach((item) => {
+      if (!groups[item.group]) groups[item.group] = [];
+      groups[item.group].push(item);
+    });
+
+    Object.keys(groups).forEach((groupName) => {
+      html += `<optgroup label="${groupName}">`;
+      groups[groupName].forEach((it) => {
+        html += `<option value="${it.code}">${it.label}</option>`;
+      });
+      html += `</optgroup>`;
+    });
+
+    html += "</select>";
+    cachedSelectHTML = html;
+    return html;
+  }
+
+  // ...и ниже без изменений твои функции toggleInput, addItem, sendData и т.д.
+</script>
+
 
         // Кэш для селекта
         let cachedSelectHTML = "";
@@ -697,3 +959,4 @@
     </script>
 </body>
 </html>
+
